[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Amorlib"
version = "1.0.0"
description = ""
authors = [{name = "LianQingYu-Love"}]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["AmorLib"]
